Remove the -Djava.security.manager setting as suggested by Arjan as this causes CNFE errors under GF8
Signed-off-by: Scott M Stark <starksm@starkinternational.com>